--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
     "react-tooltip": "^5.26.0",
+    "react18-input-otp": "^1.1.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
